--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Create.cshtml
@@ -3,32 +3,34 @@
     ViewBag.Title = "Create";
 }
 
+<div class="container">
+    <h2>Create</h2>
+    <a class="btn btn-default" href="@Url.Action("Index","Contatos")">
+        <i class="fa fa-list" aria-hidden="true"></i>
+        Listar Contatos
+    </a>
 
-<a class="btn btn-default" href="@Url.Action("Index","Contatos")">
-    <i class="fa fa-list" aria-hidden="true"></i>
-    Listar Contatos
-</a>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.Nome)
+            @Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Nome, "", new { @class = "text-danger" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email)
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Telefone)
+            @Html.TextBoxFor(m => m.Telefone, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Telefone, "", new { @class = "text-danger" })
+        </div>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Nome)
-        @Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Nome, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email)
-        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Telefone)
-        @Html.TextBoxFor(m => m.Telefone, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Telefone, "", new { @class = "text-danger" })
-    </div>
+        <input type="submit" class="btn btn-default" value="Cadastrar Contato" />
+    }
 
-    <input type="submit" class="btn btn-default" value="Cadastrar Contato" />
-}
-<h2>Create</h2>
+</div>
