--- a/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Index.cshtml
@@ -10,49 +10,55 @@
     }
 </style>
 
-<div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
 
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
-            </div>
-            <div class="modal-body">
-                <p>Você deseja deletar a noticia?</p>
+<br />
+<div class="container">
 
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Você deseja deletar a noticia?</p>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
+
         </div>
-
     </div>
+
+    <div id="content" class="col-md-12">
+
+        @Html.ActionLink("Cadastrar Investimento", "Create", "Investiment", new { @class = "btn btn-default" })
+
+        <table id="table" class="table table-bordered table-hover table-striped">
+            <tr>
+                <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control" })</td>
+                <td>@Html.TextBoxFor(m => m.Name, new { @class = "form-control" })</td>
+                <td>@Html.TextBoxFor(m => m.Stock, new { @class = "form-control" })</td>
+                <td>@Html.TextBoxFor(m => m.Value, new { @class = "form-control" })</td>
+            </tr>
+            <tr id="head">
+                <td>@Html.LabelFor(m => m.Id)</td>
+                <td>@Html.LabelFor(m => m.Name)</td>
+                <td>@Html.LabelFor(m => m.Stock)</td>
+                <td>@Html.LabelFor(m => m.Value)</td>
+                <td>Ações</td>
+            </tr>
+        </table>
+        <p class="text-center"><i id="load" class="fa fa-spinner fa-spin" style="font-size:54px"></i></p>
+    </div>
+    <div id="page"></div>
 </div>
-
-<div id="content" class="col-md-12">
-
-    @Html.ActionLink("Cadastrar Investimento", "Create", "Investiment", new { @class = "btn btn-default" })
-
-    <table id="table" class="table table-bordered table-hover table-striped">
-        <tr>
-            <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control" })</td>
-            <td>@Html.TextBoxFor(m => m.Name, new { @class = "form-control" })</td>
-            <td>@Html.TextBoxFor(m => m.Stock, new { @class = "form-control" })</td>
-            <td>@Html.TextBoxFor(m => m.Value, new { @class= "form-control" })</td>
-        </tr>
-        <tr id="head">
-            <td>@Html.LabelFor(m => m.Id)</td>
-            <td>@Html.LabelFor(m => m.Name)</td>
-            <td>@Html.LabelFor(m => m.Stock)</td>
-            <td>@Html.LabelFor(m => m.Value)</td>
-            <td>Ações</td>
-        </tr>
-    </table>
-    <p class="text-center"><i id="load" class="fa fa-spinner fa-spin" style="font-size:54px"></i></p>
-</div>
-<div id="page"></div>
+<br />
 
 <script>
     $('#Id').keypress(function (e) {
