--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Create.cshtml
@@ -4,37 +4,42 @@
     ViewBag.Title = "Create";
 }
 
-<a class="btn btn-default" href="@Url.Action("Index","News")">
-    <i class="fa fa-list" aria-hidden="true"></i>
-    Listar Noticias
-</a>
+<br />
+<div class="container">
+    <a class="btn btn-default" href="@Url.Action("Index","News")">
+        <i class="fa fa-list" aria-hidden="true"></i>
+        Listar Noticias
+    </a>
 
-@using (Html.BeginForm("Create", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Title)
-        @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Description)
-        @Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Body)
-        @Html.TextAreaFor(m => m.Body, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Body, "", new { @class = "text-danger" })
-    </div>
+    @using (Html.BeginForm("Create", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.Title)
+            @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Description)
+            @Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Body)
+            @Html.TextAreaFor(m => m.Body, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Body, "", new { @class = "text-danger" })
+        </div>
 
-    <input type="file" name="File" id="File">
+        <input type="file" name="File" id="File">
 
-    <button class="btn btn-default" type="submit">Submeter</button>
-}
-<div id="file-content"></div>
-<img src="" height="200" id="pw" alt="Prévia da imagem...">
+        <button class="btn btn-default" type="submit">Submeter</button>
+    }
+    <div id="file-content"></div>
+    <img src="" height="200" id="pw" alt="Prévia da imagem...">
+</div>
+<br />
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
