--- a/ProjetoBRQ/ProjetoBRQ/Views/Shared/_LoginPartial.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Shared/_LoginPartial.cshtml
@@ -1,22 +1,19 @@
 ﻿@using Microsoft.AspNet.Identity
+
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
     {
-    @Html.AntiForgeryToken()
-
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Olá " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Fazer logoff</a></li>
-    </ul>
+    @Html.AntiForgeryToken()        
+       // <li>@*@Html.ActionLink("Olá " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { @class = "nav-link", title = "Manage" })*@</li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">Fazer logoff</a></li>    
     }
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Registre-se", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Logon", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
+        <li class="nav-item">@Html.ActionLink("Registre-se", "Register", "Account", routeValues: null, htmlAttributes: new { @class = "nav-link", id = "registerLink" })</li>
+        <li class="nav-item">
+            @Html.ActionLink("Logon", "Login", "Account",routeValues: null, htmlAttributes: new { @class = "nav-link", id = "loginLink"})
+            <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+        </li>    
 }
