--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Create.cshtml
@@ -1,16 +1,14 @@
 ﻿@model ProjetoBRQ.Models.News
-
 @{
     ViewBag.Title = "Create";
 }
-
 <br />
 <div class="container">
+    <h2>Cadastrar noticia</h2>
     <a class="btn btn-default" href="@Url.Action("Index","News")">
         <i class="fa fa-list" aria-hidden="true"></i>
         Listar Noticias
     </a>
-
     @using (Html.BeginForm("Create", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
@@ -39,9 +37,7 @@
     <img src="" height="200" id="pw" alt="Prévia da imagem...">
 </div>
 <br />
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
 <script>
     tinymce.init({ selector: 'textarea' });
