--- a/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Create.cshtml
@@ -3,13 +3,14 @@
     ViewBag.Title = "Create";
 }
 
-
+<br />
 <div class="container">
+    <h2>Cadastrar investimento</h2>
+
     <a class="btn btn-default" href="@Url.Action("Index","Investiment")">
         <i class="fa fa-list" aria-hidden="true"></i>
         Listar Investimento
     </a>
-
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken();
@@ -39,11 +40,12 @@
             @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
         </div>
 
-        <input type="submit" class="btn btn-default" value="Cadastrar Cliente" />
+        <input type="submit" class="btn btn-default" value="Cadastrar" />
     }
 </div>
-<script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+<br />
 
+<script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
 <script>
     tinymce.init({ selector: 'textarea' });
     $(function () {
@@ -52,5 +54,3 @@
         })
     });
 </script>
-<h2>Create</h2>
-
