--- a/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Details.cshtml
@@ -2,17 +2,14 @@
 @{
     ViewBag.Title = "Details";
 }
-
+<br />
 <div class="container">
+    <h2>Informações</h2>
     <a class="btn btn-default" href="@Url.Action("Index","Investiment")">
         <i class="fa fa-list" aria-hidden="true"></i>
         Listar Investimento
     </a>
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3>Informações</h3>
-        </div>
+    <div class="panel panel-default">    
         <div class="panel-body">
             <div class="col-md-5">
                 <table class="table table-hover table-bordered table-condensed">
@@ -46,8 +43,11 @@
                 </table>
             </div>
         </div>
+
+        <a href="@Url.Action("Edit","Investiment", new { Id = Model.Id })">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+            Editar
+        </a>
     </div>
-
-    <h2>Details</h2>
 </div>
-
+<br />
