--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Create.cshtml
@@ -2,14 +2,13 @@
 @{
     ViewBag.Title = "Create";
 }
-
+<br />
 <div class="container">
-    <h2>Create</h2>
+    <h2>Cadastrar Contato</h2>
     <a class="btn btn-default" href="@Url.Action("Index","Contatos")">
         <i class="fa fa-list" aria-hidden="true"></i>
         Listar Contatos
     </a>
-
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
@@ -30,7 +29,7 @@
             @Html.ValidationMessageFor(m => m.Telefone, "", new { @class = "text-danger" })
         </div>
 
-        <input type="submit" class="btn btn-default" value="Cadastrar Contato" />
+        <input type="submit" class="btn btn-default" value="Cadastrar" />
     }
-
 </div>
+<br />
