--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Edit.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Edit.cshtml
@@ -3,8 +3,9 @@
     ViewBag.Title = "Edit";
 }
 
+<br />
 <div class="container">
-    <h2>Edit</h2>
+    <h2>Editar contatos</h2>
     <a class="btn btn-default" href="@Url.Action("Index","Contatos")">
         <i class="fa fa-list" aria-hidden="true"></i>
         Listar Contatos
@@ -30,7 +31,7 @@
             @Html.ValidationMessageFor(m => m.Telefone, "", new { @class = "text-danger" })
         </div>
 
-        <input type="submit" class="btn btn-default" value="Cadastrar Contato" />
+        <input type="submit" class="btn btn-default" value="Concluir alteração" />
     }
-
 </div>
+<br />
